--- a/Loboteca/Loboteca/Views/Admin/Admin.cshtml
+++ b/Loboteca/Loboteca/Views/Admin/Admin.cshtml
@@ -47,6 +47,7 @@
                 <li><a href="@Url.Action("Index", "ELibro")"><img src="~/images/ELibro.png" alt="ELibro"> ELibro</a></li>
                 <li><a href="@Url.Action("Index", "Libro")"><img src="~/images/Libro.png" alt="Libro"> Libro</a></li>
                 <li><a href="@Url.Action("Index", "Prestamo")"><img src="~/images/Prestamo.png" alt="Prestamo"> Préstamo</a></li>
+                <li><a href="@Url.Action("Index", "Devoluciones")"><img src="~/images/devoluciones.png" alt="Devoluciones"> Devoluciones</a></li>
                 <li><a href="@Url.Action("Index", "Revista")"><img src="~/images/Revista.png" alt="Revista"> Revista</a></li>
             </ul>
         </nav>
