--- a/Loboteca/Loboteca/Views/InventarioLibroes/Delete.cshtml
+++ b/Loboteca/Loboteca/Views/InventarioLibroes/Delete.cshtml
@@ -1,51 +1,80 @@
 ﻿@model Loboteca.Models.InventarioLibro
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = null;
 }
 
-<h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>InventarioLibro</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaApertura)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaApertura)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaCierre)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaCierre)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.InventarioTipo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.InventarioTipo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdInventarioNavigation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdInventarioNavigation.Id)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdLibroNavigation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdLibroNavigation.Id)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eliminar Inventario de Libro - Loboteca</title>
+    <link rel="stylesheet" href="~/css/InventarioLibroes/InventarioLibroesDelete.css" />
+</head>
+<body>
+    <!-- Encabezado principal -->
+    <header>
+        <nav class="navbar">
+            <ul class="logo-left">
+                <li>
+                    <img src="~/images/logo.png" alt="Logo" class="logo">
+                </li>
+            </ul>
+            <h1>LOBOTECA</h1>
+            <ul class="account-right">
+                <li>
+                    <img src="~/images/cuenta.png" alt="Cuenta" class="icono">
+                    <a href="@Url.Action("Perfil", "Perfil")">Cuenta</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+    <!-- Contenido principal -->
+    <main class="main-section">
+        <h2 class="section-title">Eliminar Inventario de Libro</h2>
+
+        <div class="row formulario-altas">
+            <h4>¿Estás seguro de que deseas eliminar este registro?</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-4">Fecha de Apertura</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.FechaApertura)</dd>
+
+                <dt class="col-sm-4">Fecha de Cierre</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.FechaCierre)</dd>
+
+                <dt class="col-sm-4">Tipo de Inventario</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.InventarioTipo)</dd>
+
+                <dt class="col-sm-4">ID Inventario</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.IdInventarioNavigation.Id)</dd>
+
+                <dt class="col-sm-4">ID Libro</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.IdLibroNavigation.Id)</dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <div class="botones">
+                    <input type="submit" value="Eliminar" class="btn-danger" />
+                    <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
+                </div>
+            </form>
+        </div>
+    </main>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; Derechos Reservados Universidad Politécnica del Valle de Toluca</p>
+        <div class="social-icons">
+            <a href="#"><img src="~/images/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="~/images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="~/images/email.png" alt="Correo"></a>
+        </div>
+    </footer>
+</body>
+</html>
