--- a/Loboteca/Loboteca/Views/Devoluciones/Details.cshtml
+++ b/Loboteca/Loboteca/Views/Devoluciones/Details.cshtml
@@ -44,13 +44,13 @@
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.Condiciones)</dd>
 
                 <dt class="col-sm-2">Administrador</dt>
-                <dd class="col-sm-10">@Html.DisplayFor(model => model.IdAdministradorNavigation.Id)</dd>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.IdAdministradorNavigation.Nombre)</dd>
 
                 <dt class="col-sm-2">Préstamo</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.IdPrestamoNavigation.Id)</dd>
 
                 <dt class="col-sm-2">Usuario</dt>
-                <dd class="col-sm-10">@Html.DisplayFor(model => model.IdUsuarioNavigation.Id)</dd>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.IdUsuarioNavigation.Nombre)</dd>
             </dl>
 
             <div class="botones">
