--- a/Loboteca/Loboteca/Views/ELibro/Index.cshtml
+++ b/Loboteca/Loboteca/Views/ELibro/Index.cshtml
@@ -28,56 +28,64 @@
                 @Html.DisplayNameFor(model => model.Estado)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.RutaDeImagen)
+                Imagen
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Archivo)
+                Archivo
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.FechaDeAlta)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IdEditorialNavigation)
+                Editorial
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Titulo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Isbn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaDePublicacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genero)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RutaDeImagen)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Archivo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaDeAlta)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdEditorialNavigation.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Titulo)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Isbn)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FechaDePublicacion)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Genero)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Estado)
+                </td>
+                <td>
+                    <img src="@item.RutaDeImagen" alt="Imagen" style="max-width: 100px; max-height: 100px;" />
+                </td>
+                <td>
+                    @if (!string.IsNullOrEmpty(item.Archivo))
+                    {
+                        <a href="@item.Archivo" target="_blank">Ver libro</a>
+                    }
+                    else
+                    {
+                        <span>No disponible</span>
+                    }
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.FechaDeAlta)
+                </td>
+                <td>
+                    @item.IdEditorialNavigation?.Nombre
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
