--- a/Loboteca/Loboteca/Views/Editorial/Create.cshtml
+++ b/Loboteca/Loboteca/Views/Editorial/Create.cshtml
@@ -46,8 +46,11 @@
                 </div>
 
                 <div class="form-group">
-                    <label asp-for="Estado" class="control-label">Estado</label>
-                    <input asp-for="Estado" class="form-control" />
+                    <label asp-for="Estado" class="control-label"></label>
+                    <select asp-for="Estado" class="form-control">
+                        <option value="Activo">Activo</option>
+                        <option value="Inactivo">Inactivo</option>
+                    </select>
                     <span asp-validation-for="Estado" class="text-danger"></span>
                 </div>
 
