--- a/Loboteca/Loboteca/Views/Editorial/Edit.cshtml
+++ b/Loboteca/Loboteca/Views/Editorial/Edit.cshtml
@@ -45,8 +45,11 @@
                     <span asp-validation-for="Nombre" class="text-danger"></span>
                 </div>
                 <div class="form-group">
-                    <label asp-for="Estado" class="control-label">Estado</label>
-                    <input asp-for="Estado" class="form-control" />
+                    <label asp-for="Estado" class="control-label"></label>
+                    <select asp-for="Estado" class="form-control">
+                        <option value="Activo">Activo</option>
+                        <option value="Inactivo">Inactivo</option>
+                    </select>
                     <span asp-validation-for="Estado" class="text-danger"></span>
                 </div>
                 <div class="botones">
