--- a/Loboteca/Loboteca/Views/Revista/Index.cshtml
+++ b/Loboteca/Loboteca/Views/Revista/Index.cshtml
@@ -12,72 +12,37 @@
 <table class="table">
     <thead>
         <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Titulo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Issn)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaDePublicacion)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Genero)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Estado)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.RutaDeImagen)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Archivo)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.FechaDeAlta)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.IdEditorialNavigation)
-            </th>
+            <th>@Html.DisplayNameFor(model => model.Titulo)</th>
+            <th>@Html.DisplayNameFor(model => model.Issn)</th>
+            <th>@Html.DisplayNameFor(model => model.FechaDePublicacion)</th>
+            <th>@Html.DisplayNameFor(model => model.Genero)</th>
+            <th>@Html.DisplayNameFor(model => model.Estado)</th>
+            <th>Imagen</th>
+            <th>Archivo</th>
+            <th>@Html.DisplayNameFor(model => model.FechaDeAlta)</th>
+            <th>Editorial</th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Titulo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Issn)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaDePublicacion)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Genero)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.RutaDeImagen)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Archivo)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.FechaDeAlta)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.IdEditorialNavigation.Id)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@item.Titulo</td>
+                <td>@item.Issn</td>
+                <td>@item.FechaDePublicacion.ToShortDateString()</td>
+                <td>@item.Genero</td>
+                <td>@item.Estado</td>
+                <td><img src="@item.RutaDeImagen" alt="Imagen" style="max-width: 100px; max-height: 100px;" /></td>
+                <td><a href="@item.Archivo" target="_blank">Ver Revista</a></td>
+                <td>@item.FechaDeAlta.ToShortDateString()</td>
+                <td>@item.IdEditorialNavigation?.Nombre</td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
