--- a/Loboteca/Loboteca/Views/Revista/Delete.cshtml
+++ b/Loboteca/Loboteca/Views/Revista/Delete.cshtml
@@ -1,75 +1,93 @@
 ﻿@model Loboteca.Models.Revistum
 
 @{
-    ViewData["Title"] = "Delete";
+    Layout = null;
 }
 
-<h1>Delete</h1>
+<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Eliminar Revista - Loboteca</title>
+    <link rel="stylesheet" href="~/css/Revista/RevistaDelete.css" />
+</head>
+<body>
+    <!-- Barra de navegación -->
+    <header>
+        <nav class="navbar">
+            <ul class="logo-left">
+                <li>
+                    <img src="~/images/logo.png" alt="Logo" class="logo">
+                </li>
+            </ul>
+            <h1>LOBOTECA</h1>
+            <ul class="account-right">
+                <li>
+                    <img src="~/images/cuenta.png" alt="Cuenta" class="icono">
+                    <a href="@Url.Action("Perfil", "Perfil")">Cuenta</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Revistum</h4>
-    <hr />
-    <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Titulo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Titulo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Issn)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Issn)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDePublicacion)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDePublicacion)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Genero)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Genero)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Estado)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Estado)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RutaDeImagen)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RutaDeImagen)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Archivo)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Archivo)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.FechaDeAlta)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.FechaDeAlta)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.IdEditorialNavigation)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.IdEditorialNavigation.Id)
-        </dd>
-    </dl>
-    
-    <form asp-action="Delete">
-        <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
-    </form>
-</div>
+    <!-- Contenido principal -->
+    <main class="main-section">
+        <h2 class="section-title">Eliminar Revista</h2>
+        <h3>¿Está seguro de que desea eliminar esta revista?</h3>
+
+        <div class="formulario-container">
+            <h4>Detalles de la Revista</h4>
+            <hr />
+            <dl class="row">
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Titulo)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Titulo)</dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Issn)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Issn)</dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.FechaDePublicacion)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.FechaDePublicacion)</dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Genero)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Genero)</dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Estado)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Estado)</dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.RutaDeImagen)</dt>
+                <dd class="col-sm-10">
+                    <img src="@Model.RutaDeImagen" alt="Imagen de la revista" style="max-width: 200px;" />
+                </dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.Archivo)</dt>
+                <dd class="col-sm-10">
+                    <a href="@Model.Archivo" target="_blank">Ver archivo PDF</a>
+                </dd>
+
+                <dt class="col-sm-2">@Html.DisplayNameFor(model => model.FechaDeAlta)</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.FechaDeAlta)</dd>
+
+                <dt class="col-sm-4">@Html.DisplayNameFor(model => model.IdEditorialNavigation)</dt>
+                <dd class="col-sm-8">@Html.DisplayFor(model => model.IdEditorialNavigation.Nombre)</dd>
+            </dl>
+
+            <form asp-action="Delete">
+                <input type="hidden" asp-for="Id" />
+                <input type="submit" value="Eliminar" class="btn btn-danger" />
+                <a asp-action="Index" class="btn btn-secondary">Regresar a la lista</a>
+            </form>
+        </div>
+    </main>
+
+    <!-- Pie de página -->
+    <footer>
+        <p>&copy; Derechos Reservados Universidad Politécnica del Valle de Toluca</p>
+        <div class="social-icons">
+            <a href="#"><img src="~/images/facebook.png" alt="Facebook"></a>
+            <a href="#"><img src="~/images/instagram.png" alt="Instagram"></a>
+            <a href="#"><img src="~/images/email.png" alt="Correo"></a>
+        </div>
+    </footer>
+</body>
+</html>
