--- a/Loboteca/Loboteca/wwwroot/css/Administrador/AdministradorEdit.css
+++ b/Loboteca/Loboteca/wwwroot/css/Administrador/AdministradorEdit.css
@@ -128,16 +128,18 @@ h2.section-title {
 }
 
 .btn-success, .btn-secondary {
-    background-color: #781c2e;
-    color: white;
+    background-color: transparent;
+    color: #781c2e;
+    border: 2px solid #781c2e;
     padding: 10px 20px;
     border-radius: 5px;
-    border: none;
     cursor: pointer;
+    transition: background-color 0.3s, color 0.3s;
 }
 
     .btn-success:hover, .btn-secondary:hover {
-        background-color: #993333;
+        background-color: darkolivegreen;
+        color: white;
     }
 
 /* Pie de página */
