--- a/Loboteca/Loboteca/Views/Carreras/Delete.cshtml
+++ b/Loboteca/Loboteca/Views/Carreras/Delete.cshtml
@@ -35,7 +35,7 @@
     <main class="main-section">
         <h2 class="section-title">¿Seguro que quieres borrar este registro?</h2>
 
-        <div class="row formulario-altas">
+        <div class="details-container">
             <h4>Carrera</h4>
             <hr />
             <dl class="row">
