--- a/Loboteca/Loboteca/Views/Carreras/Details.cshtml
+++ b/Loboteca/Loboteca/Views/Carreras/Details.cshtml
@@ -10,7 +10,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Detalles de la Carrera - Loboteca</title>
-    <link rel="stylesheet" href="~/css/Carreras/CarreraDetails.css" />
+    <link rel="stylesheet" href="~/css/Administrador/AdministradorDetails.css">
 </head>
 <body>
     <!-- Encabezado principal -->
@@ -35,23 +35,19 @@
     <main class="main-section">
         <h2 class="section-title">Detalles de la Carrera</h2>
 
-        <div class="row">
-            <div class="col-md-4 formulario-altas">
-                <h4>Carrera</h4>
-                <hr />
-                <dl class="row">
-                    <dt class="col-sm-4">Nombre</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.Nombre)</dd>
+        <div class="details-container">
+            <dl class="row">
+                <dt class="col-sm-2">Nombre</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Nombre)</dd>
 
-                    <dt class="col-sm-4">Estado</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.Estado)</dd>
-                </dl>
+                <dt class="col-sm-2">Estado</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Estado)</dd>
+            </dl>
+        </div>
 
-                <div class="botones">
-                    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn-success">Editar</a>
-                    <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
-                </div>
-            </div>
+        <div class="botones">
+            <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn-success">Editar</a>
+            <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
         </div>
     </main>
 
@@ -64,6 +60,5 @@
             <a href="#"><img src="~/images/email.png" alt="Correo"></a>
         </div>
     </footer>
-
 </body>
 </html>
