--- a/Loboteca/Loboteca/Views/Devoluciones/Delete.cshtml
+++ b/Loboteca/Loboteca/Views/Devoluciones/Delete.cshtml
@@ -36,7 +36,7 @@
         <h2 class="section-title">Eliminar Devolución</h2>
         <h3>¿Estás seguro que deseas eliminar este registro?</h3>
 
-        <div class="row detalles-altas">
+        <div class="details-container">
             <dl class="row">
                 <dt class="col-sm-2">Fecha</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.Fecha)</dd>
@@ -53,15 +53,13 @@
                 <dt class="col-sm-2">Usuario</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.IdUsuarioNavigation.Nombre)</dd>
             </dl>
-
-            <form asp-action="Delete">
-                <input type="hidden" asp-for="Id" />
-                <div class="botones">
-                    <input type="submit" value="Eliminar" class="btn btn-danger" />
-                    <a asp-action="Index" class="btn btn-secondary">Regresar a la lista</a>
-                </div>
-            </form>
         </div>
+
+        <form asp-action="Delete" class="botones">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Eliminar" class="btn-danger" />
+            <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
+        </form>
     </main>
 
     <!-- Pie de página -->
