--- a/Loboteca/Loboteca/Views/Devoluciones/Details.cshtml
+++ b/Loboteca/Loboteca/Views/Devoluciones/Details.cshtml
@@ -35,7 +35,7 @@
     <main class="main-section">
         <h2 class="section-title">Detalles Devolución</h2>
 
-        <div class="row detalles-altas">
+        <div class="details-container">
             <dl class="row">
                 <dt class="col-sm-2">Fecha</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.Fecha)</dd>
@@ -52,11 +52,11 @@
                 <dt class="col-sm-2">Usuario</dt>
                 <dd class="col-sm-10">@Html.DisplayFor(model => model.IdUsuarioNavigation.Nombre)</dd>
             </dl>
+        </div>
 
-            <div class="botones">
-                <a asp-action="Edit" asp-route-id="@Model.Id" class="btn btn-warning">Editar</a>
-                <a asp-action="Index" class="btn btn-secondary">Regresar a la lista</a>
-            </div>
+        <div class="botones">
+            <a asp-action="Edit" asp-route-id="@Model.Id" class="btn-success">Editar</a>
+            <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
         </div>
     </main>
 
@@ -69,5 +69,9 @@
             <a href="#"><img src="~/images/email.png" alt="Correo"></a>
         </div>
     </footer>
+
+    @section Scripts {
+        @await Html.PartialAsync("_ValidationScriptsPartial")
+    }
 </body>
 </html>
