--- a/Loboteca/Loboteca/Views/Ingresoes/Delete.cshtml
+++ b/Loboteca/Loboteca/Views/Ingresoes/Delete.cshtml
@@ -4,14 +4,13 @@
     Layout = null;
 }
 
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Eliminar Ingreso - Loboteca</title>
-    <link rel="stylesheet" href="~/css/Ingresoes/IngresoesDelete.css" />
+    <link rel="stylesheet" href="~/css/Ingresoes/IngresoesDelete.css">
 </head>
 <body>
     <!-- Encabezado principal -->
@@ -35,29 +34,26 @@
     <!-- Contenido principal -->
     <main class="main-section">
         <h2 class="section-title">Eliminar Ingreso</h2>
+        <h3>¿Estás seguro de que deseas eliminar este ingreso?</h3>
 
-        <div class="row">
-            <div class="col-md-4 formulario-altas">
-                <h4>¿Estás seguro de que deseas eliminar este ingreso?</h4>
-                <hr />
-                <dl class="row">
-                    <dt class="col-sm-4">Fecha de Ingreso</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.FechaIngreso)</dd>
+        <div class="details-container">
+            <dl class="row">
+                <dt class="col-sm-2">Fecha de Ingreso</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.FechaIngreso)</dd>
 
-                    <dt class="col-sm-4">Ejemplares</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.Ejemplares)</dd>
+                <dt class="col-sm-2">Ejemplares</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Ejemplares)</dd>
 
-                    <dt class="col-sm-4">Libro</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.IdLibroNavigation.Id)</dd>
-                </dl>
-
-                <form asp-action="Delete">
-                    <input type="hidden" asp-for="Id" />
-                    <input type="submit" value="Eliminar" class="btn btn-danger" />
-                    <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
-                </form>
-            </div>
+                <dt class="col-sm-2">Libro</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.IdLibroNavigation.Titulo)</dd>
+            </dl>
         </div>
+
+        <form asp-action="Delete" class="botones">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Eliminar" class="btn-danger" />
+            <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
+        </form>
     </main>
 
     <!-- Pie de página -->
@@ -69,6 +65,5 @@
             <a href="#"><img src="~/images/email.png" alt="Correo"></a>
         </div>
     </footer>
-
 </body>
 </html>
