--- a/Loboteca/Loboteca/Views/Ingresoes/Details.cshtml
+++ b/Loboteca/Loboteca/Views/Ingresoes/Details.cshtml
@@ -35,26 +35,22 @@
     <main class="main-section">
         <h2 class="section-title">Detalles del Ingreso</h2>
 
-        <div class="row">
-            <div class="col-md-4 formulario-altas">
-                <h4>Ingreso</h4>
-                <hr />
-                <dl class="row">
-                    <dt class="col-sm-4">Fecha de Ingreso</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.FechaIngreso)</dd>
+        <div class="details-container">
+            <dl class="row">
+                <dt class="col-sm-2">Fecha de Ingreso</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.FechaIngreso)</dd>
 
-                    <dt class="col-sm-4">Ejemplares</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.Ejemplares)</dd>
+                <dt class="col-sm-2">Ejemplares</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.Ejemplares)</dd>
 
-                    <dt class="col-sm-4">Libro</dt>
-                    <dd class="col-sm-8">@Html.DisplayFor(model => model.IdLibroNavigation.Id)</dd>
-                </dl>
+                <dt class="col-sm-2">Libro</dt>
+                <dd class="col-sm-10">@Html.DisplayFor(model => model.IdLibroNavigation.Titulo)</dd>
+            </dl>
+        </div>
 
-                <div class="botones">
-                    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn-success">Editar</a>
-                    <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
-                </div>
-            </div>
+        <div class="botones">
+            <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn-success">Editar</a>
+            <a asp-action="Index" class="btn-secondary">Regresar a la lista</a>
         </div>
     </main>
 
@@ -69,4 +65,3 @@
     </footer>
 </body>
 </html>
-
