--- a/Loboteca/Loboteca/wwwroot/css/Carreras/CarreraDetails.css
+++ b/Loboteca/Loboteca/wwwroot/css/Carreras/CarreraDetails.css
@@ -3,9 +3,6 @@ body {
     margin: 0;
     font-family: Arial, sans-serif;
     background-color: #f2f2f2;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
 }
 
 /* Barra de navegación */
@@ -78,10 +75,6 @@ body {
 
 /* Sección principal */
 .main-section {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     padding: 20px;
 }
 
@@ -91,9 +84,10 @@ body {
     margin-bottom: 20px;
 }
 
-/* Formulario de detalles */
-.formulario-altas {
-    width: 40%;
+/* Contenedor de los detalles */
+.details-container {
+    width: 60%;
+    margin: 0 auto;
     padding: 20px;
     border: 2px solid #ccc;
     border-radius: 10px;
@@ -101,25 +95,21 @@ body {
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 
-dl.row {
-    margin-bottom: 15px;
-}
-
-dt {
-    font-weight: bold;
+dl.row dt {
     color: #781c2e;
-    margin-bottom: 5px;
+    font-weight: bold;
 }
 
-dd {
-    margin-bottom: 15px;
+dl.row dd {
+    padding: 10px;
 }
 
 /* Botones */
 .botones {
     display: flex;
     justify-content: space-between;
-    margin-top: 20px;
+    width: 50%;
+    margin: 20px auto;
 }
 
 .btn-success, .btn-secondary {
@@ -129,8 +119,6 @@ dd {
     border-radius: 5px;
     border: none;
     cursor: pointer;
-    text-decoration: none;
-    text-align: center;
 }
 
     .btn-success:hover, .btn-secondary:hover {
@@ -143,21 +131,14 @@ footer {
     color: white;
     text-align: center;
     padding: 10px;
+    margin-top: 55px;
 }
 
-    footer p {
-        margin: 0;
-    }
-
-.social-icons {
-    margin-top: 10px;
+.social-icons a img {
+    width: 30px;
+    margin: 0 10px;
 }
 
-    .social-icons a img {
-        width: 30px;
-        margin: 0 10px;
+    .social-icons a img:hover {
+        opacity: 0.7;
     }
-
-        .social-icons a img:hover {
-            opacity: 0.7;
-        }
